refactor: 상품 API 대표 사진 추가
- 카테고리 not null 추가
- 대표 이미지를 사용하면서 기존 로직들 수정
- 더이상 사용하지 않는 이미지 테이블 삭제